--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -1,13 +1,19 @@
 \documentclass[compress,red]{beamer}
 \usepackage{etex}
 \mode<presentation>
-\setbeamertemplate{navigation symbols}{}
+
 \usetheme{Warsaw}
+%\usetheme{Madrid}
+
+\setbeamertemplate{navigation symbols}{}
+\setbeamertemplate{headline}{}
+
 %\setbeameroption{show notes}
 \setbeameroption{hide notes}
 
 %\hypersetup{pdfpagemode=FullScreen} % makes your presentation go automatically to full screen
-\useoutertheme[subsection=false]{smoothbars}
+%\useoutertheme[subsection=false]{smoothbars}
+\useoutertheme{shadow}
 
 % include packages
 \usepackage{subfigure}
@@ -39,12 +45,13 @@
 }
 
 
-\title % (optional, use only with long paper titles)
-{F*WATCH, making a watch differently!}
+%\title{F*WATCH, making a watch differently!}
+\title[{\makebox[.45\paperwidth]{F*WATCH\hfill%
+       \insertframenumber/\inserttotalframenumber}}]{F*WATCH, making a watch differently!}
 
 
 \author % (optional, use only with lots of authors)
-{Matthieu Cattin, Federico Vaga}
+{Federico Vaga, Matthieu Cattin}
 % - Give the names in the same order as the appear in the paper.
 % - Use the \inst{?} command only if the authors have different
 %   affiliation.
@@ -83,12 +90,12 @@
 
 % Delete this, if you do not want the table of contents to pop up at
 % the beginning of each subsection:
-\AtBeginSection[]
-{
-  \begin{frame}<beamer>{Outline}
-    \tableofcontents[currentsection]
-  \end{frame}
-}
+%\AtBeginSection[]
+%{
+%  \begin{frame}<beamer>{Outline}
+%    \tableofcontents[currentsection]
+%  \end{frame}
+%}
 
 
 % If you wish to uncover everything in a step-wise fashion, uncomment
@@ -105,15 +112,10 @@
   \note[item]{We're going to talk about a after-work project we made last summer with a few other colleagues from CERN.}
 \end{frame}
 
-\begin{frame}{Outline}
-  \tableofcontents
+%\begin{frame}{Outline}
+%  \tableofcontents
   % You might wish to add the option [pausesections]
-  \note[item]{First blabla}
-  \note[item]{Then ...}
-  \note[item]{Then ...}
-  \note[item]{Also ...}
-  \note[item]{Finally, ...}
-\end{frame}
+%\end{frame}
 
 
 % Structuring a talk is a difficult task and the following structure
