--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -8,8 +8,8 @@
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{headline}{}
 
-%\setbeameroption{show notes}
-\setbeameroption{hide notes}
+\setbeameroption{show notes}
+%\setbeameroption{hide notes}
 
 %\hypersetup{pdfpagemode=FullScreen} % makes your presentation go automatically to full screen
 %\useoutertheme[subsection=false]{smoothbars}
@@ -309,16 +309,18 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{PCB design}
 
-  \begin{block}{}
+  \begin{block}{Characteristics}
     \begin{itemize}
-    \item KiCad
-    \item CERN is contributing
-    \item Developer next door (help, bugfix, feedback)
+    \item 4 x 4 cm
+    \item 4 layers
+    \item Components on both sides
+    \item Manufactered by Eurocircuits
     \end{itemize}
   \end{block}
 
   \begin{center}
-    \includegraphics[height=1cm]{../pictures/kicad_logo.eps}
+    %\includegraphics[height=1cm]{../pictures/pcb_top.eps}~
+    %\includegraphics[height=1cm]{../pictures/pcb_bot.eps}
   \end{center}
 
   \note[item]{}
@@ -328,8 +330,41 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{PCB assembly}
 
+  \begin{block}{}
+    \begin{itemize}
+    \item Stencils (ordered with PCB)
+    \item Leaded soldering paste (easier to handle than lead-free)
+    \item Components placed by hand (script to generate placement pdf)
+    \item Soldered with hot-air station (quite tricky!)
+    \end{itemize}
+  \end{block}
+
   \begin{center}
-    %\includegraphics[height=1cm]{../pictures/kicad_logo.eps}
+    %\includegraphics[height=1cm]{../pictures/pcb_assembly.eps}
+    %\includegraphics[height=1cm]{../pictures/placement_pdf.eps}
+  \end{center}
+
+  \note[item]{}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{PCB test}
+
+  \begin{block}{First prototype fully working, except...}
+    \begin{itemize}
+    \item ... one error in a footprint (voltage regulator)
+    \item ... MCU interrupt scheme
+      \begin{itemize}
+      \item Polling for charger state
+      \item Draining the battery quickly
+      \item Fixed with few wires!
+      \end{itemize}
+    \end{itemize}
+  \end{block}
+
+  \begin{center}
+    %\includegraphics[height=1cm]{../pictures/pcb_assembly.eps}
   \end{center}
 
   \note[item]{}
@@ -371,6 +406,14 @@
     \item 3D printing (new for us)
     \end{itemize}
   \end{block}
+
+  \note[item]{Learn Freecad = show the making of video}
+  \note[item]{Button = show detailed cut-view of button and explain quickly}
+  \note[item]{Water-resistance = show, explain grove and rubber join idea}
+  \note[item]{Size = keep it reasonably small to be wearable on the wrist}
+  \note[item]{Wrist-strap = easy to get "nato" type wrist-strap, bought online}
+  \note[item]{3D printing = didn't knew the domain, studied the main 3d printing services, }
+  \note[item]{}
 
 \end{frame}
 
@@ -430,21 +473,6 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{Mechanical design}
 
-  \begin{block}{Wishbone for modularity}
-    \begin{itemize}
-    \item Open standard
-    \item Simple, uses few FPGA resources
-    \item Collection of cores already available (OpenCores)
-    \end{itemize}
-  \end{block}
-
-  \begin{block}{New cores developed}
-    \begin{itemize}
-    \item At CERN: VME64x, PCIe, DDR3
-    \item By collaborators: Wishbone crossbar (GSI)
-%    \item Crossbar to interconnect/arbitrate masters and slaves % developed in GSI
-    \end{itemize}
-  \end{block}
 
   \note[item]{}
 
@@ -482,27 +510,34 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{I want to build this watch, what should I do?}
 
-  \begin{block}{hdlmake: Automating HDL design flow}
+  \begin{block}{Tools and techniques}
     \begin{itemize}
-    \item Generates Makefiles for synthesis and simulation.
-    \item Project structure described in Manifest files.
-    \item Solves dependencies (fetches remote ones).
+    \item Soldering QFN/BGA (stencil, paste)
+    \item Hot-air station or oven
+    \item Milling maching (optionnal for plexiglass)
     \end{itemize}
   \end{block}
 
-  \begin{block}{wbgen2: Wishbone slave generator}
-    \begin{itemize}
-    \item Describes structure in a single text file.
-    \item Automatically generates HDL source, C header and documentation.
-    \item Generates registers, RAM, FIFO, interrupt controller.
-    \end{itemize}
-  \end{block}
+  \note[item]{}
 
-  \begin{block}{}
-    \begin{center}
-      Both FOSS tools available on ohwr.org
-    \end{center}
-  \end{block}
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{How much does it costs?}
+
+  \begin{table}[h]
+    \begin{tabular}{l|r|r|r|l}
+      \cline{2-4}
+      & \multicolumn{3}{c|}{Number of watches}                                     &  \\ \cline{2-4}
+      & \multicolumn{1}{c|}{1} & \multicolumn{1}{c|}{10} & \multicolumn{1}{c|}{50} &  \\ \cline{1-4}
+      \multicolumn{1}{|l|}{Pcb + components}         & 166 EUR                & 87 EUR                  & 73 EUR                  &  \\ \cline{1-4}
+      \multicolumn{1}{|l|}{Pcb assembly}             & -                      & 104 EUR                 & 59 EUR                  &  \\ \cline{1-4}
+      \multicolumn{1}{|l|}{Case + buttons + screws}  & 67 EUR                 & 65 EUR                  & 60 EUR                  &  \\ \cline{1-4}
+      \multicolumn{1}{|l|}{\textbf{TOTAL per watch}} & \textbf{233 EUR}       & \textbf{256 EUR}        & \textbf{193 EUR}        &  \\ \cline{1-4}
+      \multicolumn{1}{|l|}{\textbf{TOTAL}}           & \textbf{233 EUR}       & \textbf{2'558 EUR}      & \textbf{9'630 EUR}      &  \\ \cline{1-4}
+    \end{tabular}
+  \end{table}
+
 
   \note[item]{}
 
@@ -516,34 +551,61 @@
 \subsection*{} % dummy subsection to display dots
 
 %------------ FRAME --------------------------------------------------
-\begin{frame}{Future work}
+\begin{frame}{What's next?}
 
-  \begin{block}{Consolidate our designs}
+  \begin{block}{Improvements}
     \begin{itemize}
-%    \item Consolidate gateware and drivers. Make more releases.
-%    \item Consolidate documentation (manuals, FAQs, ...).
-%    \item Help companies to provide support.
-%    \item Cleanup and unify repositories.
-    \item Consolidate documentation (starter guides, ...).
-    \item Continue to tranfer knowledge to companies. 
+    \item Bluetooth LE
+    \item Water-resistance
+    \item LCD backlight
+    \item Reduce PCB/housing size
+    \item 
     \end{itemize}
   \end{block}
 
-  \begin{block}{Future platform}
+  \begin{block}{Software}
     \begin{itemize}
-    \item Current platform limitations
-    \item Ready for a new platform
-      \begin{itemize}
-%      \item Just designing a carrier
-      \item Re-useable mezzanines set
-      \item HDL and software framework ready
-      \end{itemize}
+    \item Firmware loader
+    \item Data transfer (to/from SD card)
+    \item Emulator
+    \item Application "ecosystem"
     \end{itemize}
   \end{block}
 
   \note[item]{}
 
 \end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{What's next?}
+
+  \begin{block}{Build a community}
+    \begin{itemize}
+    \item 
+    \item 
+    \end{itemize}
+  \end{block}
+
+  \note[item]{}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{What's next?}
+
+  \begin{block}{Make a kit}
+    \begin{itemize}
+    \item Pre-assembled PCB option
+    \item Customisable strap/housing color
+    \item Alternative housing
+    \item Sold by a company?
+    \end{itemize}
+  \end{block}
+
+  \note[item]{}
+
+\end{frame}
+
 
 
 %------------ FRAME --------------------------------------------------
@@ -551,29 +613,11 @@
 
   \begin{block}{}
     \begin{itemize}
-    \item CERN's FMC kit is not only a set of hardware modules.
-      \begin{itemize}
-      \item Collection of HDL cores
-      \item Linux device drivers, libraries and test programs
-      \item Production test systems
-      \item Tools and concepts %(wbgen, hdlmake, )
-       \end{itemize}
-%    \item Commercially available (sometimes from several sources)
-    \item Using standards improves re-usability. %(VME64x, PCIe, FMC, Wishbone)
-    \item Eight CERN designs are already commercialized.
-    \item New users and collaborations are welcome.
-    \item Four years of experience show it works!
-
-%    \item Open Hardware has many advantages.
-%      \begin{itemize}
-%      \item Anyone can help in developments and make improvements.
-%      \item Allows to work differently with industry. % (design work, smaller companies).
-%      \item Not tied to a single company for production and support.
-%      \end{itemize}
-%    \item OHR site is practical for engineers and is stimulating.
-%    \item OHR site contains many re-usable HDL cores.
-%    \item Good FOSS tools needed to facilitate sharing.
-%    \item Many designs being developed and several are already produced by industry.
+    \item 
+    \item 
+    \item 
+    \item 
+    \item 
     \end{itemize}
   \end{block}
 
@@ -581,29 +625,8 @@
 
 \end{frame}
 
-%------------ FRAME --------------------------------------------------
-\begin{frame}{Open products are real products\textsuperscript{\texttrademark}}
-
-  \begin{center}
-    %\includegraphics[height=6cm]{../pictures/ohr_companies.eps}
-  \end{center}
-
-  \begin{block}{}
-    \begin{center}
-    Want to know more? Take a tour on \textbf{ohwr.org}
-    \end{center}
-  \end{block}
-
-  \note[item]{}
-
-\end{frame}
-
-
-
 
 \begin{comment}
-
-
 \end{comment}
 
 
