--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -8,8 +8,8 @@
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{headline}{}
 
-\setbeameroption{show notes}
-%\setbeameroption{hide notes}
+%\setbeameroption{show notes}
+\setbeameroption{hide notes}
 
 %\hypersetup{pdfpagemode=FullScreen} % makes your presentation go automatically to full screen
 %\useoutertheme[subsection=false]{smoothbars}
@@ -38,10 +38,12 @@
 %\usepackage{hyperref}
 \usepackage{pgfpages}
 
+\graphicspath{{../pictures/}}
+
 
 %\logo{}
 \titlegraphic{\scalebox{4}{
-    \includegraphics[height=0.5cm]{../pictures/ohwr_logo.eps}
+    \includegraphics[height=0.5cm]{ohwr_logo.eps}
   }
 }
 
@@ -222,7 +224,7 @@
   \end{block}
 
   \begin{center}
-    \includegraphics[height=5cm]{../pictures/M10478-A1.eps}
+    \includegraphics[height=5cm]{M10478-A1.eps}
   \end{center}
 
   \note[item]{}
@@ -241,7 +243,7 @@
   \end{block}
 
   \begin{center}
-    \includegraphics[height=4.5cm]{../pictures/MS5806-02BA52-51.eps}
+    \includegraphics[height=4.5cm]{MS5806-02BA52-51.eps}
   \end{center}
 
   \note[item]{}
@@ -261,7 +263,7 @@
 
 
   \begin{center}
-    \includegraphics[height=4.5cm]{../pictures/LCD.eps}
+    \includegraphics[height=4.5cm]{LCD.eps}
   \end{center}
 
   \note[item]{}
@@ -280,7 +282,27 @@
   \end{block}
 
   \begin{center}
-    \includegraphics[height=5cm]{../pictures/battery.eps}
+    \includegraphics[height=5cm]{battery.eps}
+  \end{center}
+
+  \note[item]{}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{Backlight}
+
+  \begin{block}{A long story...}
+    \begin{enumerate}
+    \item LEDs + opaque plexiglass = fail
+    \item Recycled smartphone backlight = works fine, but can't be sell as a kit
+    \item Custom-made backlight = testing it now, promissing, cheap even in small quantity!
+    \end{enumerate}
+  \end{block}
+
+  \begin{center}
+    Backlight pictures here
+    %\includegraphics[height=5cm]{battery.eps}
   \end{center}
 
   \note[item]{}
@@ -295,12 +317,18 @@
     \item KiCad
     \item CERN is contributing
     \item Developer next door (help, bugfix, feedback)
-    \item 
+    \item New features making routing easier
+    \end{itemize}
+  \end{block}
+
+  \begin{block}{Interested in knowing more about KiCad developments?}
+    \begin{itemize}
+    \item Visit the EDA tools dev room tomorrow
     \end{itemize}
   \end{block}
 
   \begin{center}
-    \includegraphics[height=1cm]{../pictures/kicad_logo.eps}
+    \includegraphics[height=1cm]{kicad_logo.eps}
   \end{center}
 
   \note[item]{}
@@ -320,8 +348,9 @@
   \end{block}
 
   \begin{center}
-    %\includegraphics[height=1cm]{../pictures/pcb_top.eps}~
-    %\includegraphics[height=1cm]{../pictures/pcb_bot.eps}
+    PCB top and bottom pictures here
+    %\includegraphics[height=1cm]{pcb_top.eps}~
+    %\includegraphics[height=1cm]{pcb_bot.eps}
   \end{center}
 
   \note[item]{}
@@ -329,43 +358,26 @@
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
-\begin{frame}{PCB assembly}
+\begin{frame}{PCB validation}
 
-  \begin{block}{}
+  \begin{block}{First prototype fully working, except two minor bugs}
     \begin{itemize}
-    \item Stencils (ordered with PCB)
-    \item Leaded soldering paste (easier to handle than lead-free)
-    \item Components placed by hand (script to generate placement pdf)
-    \item Soldered with hot-air station (quite tricky!)
-    \end{itemize}
-  \end{block}
-
-  \begin{center}
-    %\includegraphics[height=1cm]{../pictures/pcb_assembly.eps}
-    %\includegraphics[height=1cm]{../pictures/placement_pdf.eps}
-  \end{center}
-
-  \note[item]{}
-
-\end{frame}
-
-%------------ FRAME --------------------------------------------------
-\begin{frame}{PCB test}
-
-  \begin{block}{First prototype fully working, except...}
-    \begin{itemize}
-    \item ... one error in a footprint (voltage regulator)
-    \item ... MCU interrupt scheme
+    \item Error in a footprint
       \begin{itemize}
-      \item Polling for charger state
-      \item Draining the battery quickly
-      \item Fixed with few wires!
+      \item Voltage regulator output wrongly set
       \end{itemize}
+    \item MCU interrupt scheme
+      \begin{itemize}
+      \item No all MCU pins can be used as interrupt source
+      \item Polling is draining the baterry quickly
+      \end{itemize}
+    \item Fixed with few cuts and wires!
     \end{itemize}
   \end{block}
 
   \begin{center}
-    %\includegraphics[height=1cm]{../pictures/pcb_assembly.eps}
+    mounted pcb pictures here
+    %\includegraphics[height=1cm]{pcb_assembly.eps}
   \end{center}
 
   \note[item]{}
@@ -389,7 +401,7 @@
   \end{itemize}
 
   \begin{center}
-    \includegraphics[height=2cm]{../pictures/freecad_logo.eps}
+    \includegraphics[height=2cm]{freecad_logo.eps}
   \end{center}
 
 \end{frame}
@@ -422,7 +434,7 @@
 \begin{frame}{3D model}
 
   \begin{center}
-    \includegraphics[height=4.8cm]{../pictures/case-design-model.eps}
+    \includegraphics[height=4.8cm]{case-design-model.eps}
   \end{center}
 
 \end{frame}
@@ -431,11 +443,11 @@
 \begin{frame}{First 3D print}
 
   \begin{itemize}
-  \item Made of platic (powder)
+  \item Platic material (powder-based)
   \end{itemize}
 
   \begin{center}
-    \includegraphics[height=5cm]{../pictures/case-design-print-v2.eps}
+    \includegraphics[height=5cm]{case-design-print-v2.eps}
   \end{center}
 
 \end{frame}
@@ -444,62 +456,15 @@
 \begin{frame}{Second 3D print}
 
   \begin{itemize}
-  \item Made of resin (liquid)
+  \item Resin material (liquid-based)
   \end{itemize}
 
   \begin{center}
-    \includegraphics[height=4.1cm]{../pictures/case-design-print-v3.eps}
+    \includegraphics[height=4.1cm]{case-design-print-v3.eps}
   \end{center}
 
 \end{frame}
 
-%------------ FRAME --------------------------------------------------
-\begin{frame}{Software (firmware, host software)}
-
-  \begin{center}
-    %\includegraphics[height=7cm]{../pictures/spec_v4.eps}
-  \end{center}
-
-  \note[item]{}
-
-\end{frame}
-
-
-%#####################################################################
-%############ SECTION ################################################
-\section{The tools / the message}
-
-\subsection*{} % dummy subsection to display dots
-
-%------------ FRAME --------------------------------------------------
-\begin{frame}{Mechanical design}
-
-
-  \note[item]{}
-
-\end{frame}
-
-%------------ FRAME --------------------------------------------------
-\begin{frame}{PCB design}
-
-  \begin{center}
-    %\includegraphics[height=6cm]{../pictures/spec-fmc-adc_arch_simple_color.eps}
-  \end{center}
-
-  \note[item]{}
-
-\end{frame}
-
-%------------ FRAME --------------------------------------------------
-\begin{frame}{Software}
-
-  \begin{center}
-    %\includegraphics[height=6cm]{../pictures/spec-fmc-adc_arch_simple_color.eps}
-  \end{center}
-
-  \note[item]{}
-
-\end{frame}
 
 
 %#####################################################################
@@ -511,13 +476,52 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{I want to build this watch, what should I do?}
 
+  \begin{block}{Components procurement}
+    \begin{itemize}
+    \item Buy electronics components
+    \item Download PCB gerber file and order circuit
+    \item Download 3D model and order from a 3D service
+    \end{itemize}
+  \end{block}
+
   \begin{block}{Tools and techniques}
     \begin{itemize}
     \item Soldering QFN/BGA (stencil, paste)
     \item Hot-air station or oven
     \item Milling maching (optionnal for plexiglass)
+    \item Programmer to flash the booloader
     \end{itemize}
   \end{block}
+
+  \begin{block}{Software}
+    \begin{itemize}
+    \item Download sources
+    \item Find your way in the sources (not nicely bundled, yet)
+    \item Compile booloader and flash (using a programmer)
+    \item Compile application software and flash (using the bootloader)
+    \end{itemize}
+  \end{block}
+
+  \note[item]{}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{PCB assembly}
+
+  \begin{block}{}
+    \begin{itemize}
+    \item Stencils (ordered with PCB)
+    \item Leaded soldering paste (easier to handle than lead-free)
+    \item Components placed by hand (script to generate placement pdf)
+    \item Soldered with hot-air station (quite tricky!)
+    \end{itemize}
+  \end{block}
+
+  \begin{center}
+    %\includegraphics[height=1cm]{pcb_assembly.eps}
+    %\includegraphics[height=1cm]{placement_pdf.eps}
+  \end{center}
 
   \note[item]{}
 
@@ -543,6 +547,25 @@
 
   \end{block}
 
+
+  \note[item]{}
+
+\end{frame}
+
+
+%#####################################################################
+%############ SECTION ################################################
+\section{Softwarexs}
+
+\subsection*{} % dummy subsection to display dots
+
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{Software (firmware, host software)}
+
+  \begin{center}
+    %\includegraphics[height=7cm]{spec_v4.eps}
+  \end{center}
 
   \note[item]{}
 
@@ -612,6 +635,11 @@
 \end{frame}
 
 
+%#####################################################################
+%############ SECTION ################################################
+\section{Conclusion}
+
+\subsection*{} % dummy subsection to display dots
 
 %------------ FRAME --------------------------------------------------
 \begin{frame}{Conclusions}
