--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -39,8 +39,8 @@
 \usepackage{pgfpages}
 \usepackage{setspace}
 
-\graphicspath{{../pictures/}}
 
+\graphicspath{{../pictures/}}
 
 %\logo{}
 \titlegraphic{\scalebox{4}{
@@ -107,14 +107,14 @@
 
 %\beamerdefaultoverlayspecification{<+->}
 
-\setstretch{1.5}
-
 \begin{document}
 
 \begin{frame}
   \titlepage
-  \note[item]{Introduce speakers.}
-  \note[item]{We're going to talk about a after-work project we made last summer with a few other colleagues from CERN.}
+  \note[item]{Federico: software engineer}
+  \note[item]{Metthieu: electronic engineer}
+  \note[item]{CERN BE-CO}.
+  \note[item]{free time project}
 \end{frame}
 
 %\begin{frame}{Outline}
@@ -150,18 +150,17 @@
 
 %------------ FRAME --------------------------------------------------
 \begin{frame}{What is it?}
-
-\alt<2> {
   \begin{center}
-    
-\includegraphics[height=7.5cm]{../pictures/fwatch-full-side-red.eps}
+    \includegraphics[height=7.5cm]{fwatch-full-side-red.eps}
   \end{center}
-} {
-  \begin{center}
-\includegraphics[height=7.5cm]{../pictures/fwatch-full-side-black.eps}
-  \end{center}
-}
-
+  \note[item]{This is a GPS watch}
+  \note[item]{A lot of sensors}
+  \note[item]{B/W screen}
+  \note[item]{no touch screen --- buttons}
+  \note[item]{other components --- not all}
+  \note[item]{GPS module}
+  \note[item]{it can run applications (smart watch)}
+  \note[item]{Free product}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -177,48 +176,37 @@
     \item free/open source
   \end{enumerate}
 
+  \note[item]{Retirement timing hacker}
+  \note[item]{currently, not free smart device}
+  \note[item]{challange do it --- with free tools}
 
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 \begin{frame}{Development organization}
   \begin{center}
-    \includegraphics[height=7cm]{../pictures/fwatch-team.eps}
+    \includegraphics[height=7cm]{fwatch-team.eps}
   \end{center}
 
-  \note{
-   3 groups : mechanic, electronic, software \\
-   5 months : only people free time
-  }
-
+  \note[item]{people more or less involved}
+  \note[item]{less than 5 months}
+  \note[item]{after-work --- only free time}
+  \note[item]{3 groups : mechanic, electronic, software}
+  \note[item]{weekly meeting}
+  \note[item]{introduce matthieu}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
-\Large
-\begin{frame}{Features}
-  \begin{itemize}
-    \item Low power MCU
-    \item LCD display
-    \item Sensors
-    \item I/O interface
-    \item GPS module
-  \end{itemize}
-
-  \note[item]{Low power MCU}
-  \note[item]{LCD display (+ backlight)}
-  \note[item]{micro-USB connector (charging, data transfer)}
-  \note[item]{Li-ion battery (+ fuel gauge)}
-  \note[item]{microSD card}
-  \note[item]{4 buttons}
-  \note[item]{GPS module}
-  \note[item]{Pressure sensor (altitude, barometer)}
-  \note[item]{Compass}
-  \note[item]{3D accelerometer}
-  \note[item]{Ambient light sensor (backlight adjustment)}
-  \note[item]{Buzzer}
-  \note[item]{Vibrating motor}
-
-\end{frame}
+%% \Large
+%% \begin{frame}{Features}
+%%   \begin{itemize}
+%%     \item Low power MCU
+%%     \item LCD display
+%%     \item Sensors
+%%     \item I/O interface
+%%     \item GPS module
+%%   \end{itemize}
+%% \end{frame}
 
 
 %#####################################################################
@@ -314,7 +302,7 @@
     \includegraphics[height=5cm]{battery.eps}
   \end{center}
 
-
+  \note{battery}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -334,7 +322,6 @@
   \end{center}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -360,7 +347,6 @@
   \end{center}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -382,7 +368,6 @@
   \end{center}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -409,7 +394,6 @@
   \end{center}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -431,7 +415,7 @@
   \begin{center}
     \includegraphics[height=2cm]{freecad_logo.eps}
   \end{center}
-
+  \note{Mechanical design}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -464,7 +448,7 @@
   \begin{center}
     \includegraphics[height=4.8cm]{case-design-model.eps}
   \end{center}
-
+  \note{3D model}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -477,7 +461,7 @@
   \begin{center}
     \includegraphics[height=5cm]{case-design-print-v2.eps}
   \end{center}
-
+  \note{3D Model}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -490,7 +474,7 @@
   \begin{center}
     \includegraphics[height=4.1cm]{case-design-print-v3.eps}
   \end{center}
-
+  \note{3D Model}
 \end{frame}
 
 
@@ -531,7 +515,6 @@
   \end{block}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -552,7 +535,6 @@
   \end{center}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -577,7 +559,6 @@
 
 
   \note[item]{}
-
 \end{frame}
 
 
@@ -596,7 +577,6 @@
   \end{center}
 
   \note[item]{}
-
 \end{frame}
 
 
@@ -629,7 +609,6 @@
   \end{block}
 
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -642,7 +621,6 @@
     \end{itemize}
   \end{block}
   \note[item]{}
-
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -658,7 +636,6 @@
   \end{block}
 
   \note[item]{}
-
 \end{frame}
 
 %#####################################################################
@@ -666,23 +643,33 @@
 \section{Software}
 
 \begin{frame}{MCU SDK}
- 
+  \Large
+  \begin{center}
+    Mainly open source software \\
+    \vskip 1cm
+    A lot of integration examples \\
+    \vskip 1cm
+    Well documented \\
+  \end{center}
+
+  \note{Say few things about the SDK}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 
 \begin{frame}{Bootloader}
- \begin{center}
-  free bootloader provided by SiliconLab \\
-  support for IAR, Keil uVision \\
-  migrate to gcc toolchain\\
- % \begin{displaymath}
- %     \xymatrix@C+=5cm@R+=2cm{IAR \ar[r]^ & gcc toolchain}
- % \end{displaymath}
-  
-  (don't use gcc optimization!)
- \end{center}
- 
+  \Large
+  \begin{center}
+    free bootloader provided by SiliconLab \\
+    \vskip 1cm
+    support for IAR, Keil uVision \\
+    \vskip 1cm
+    migrate to gcc toolchain \\
+    \vskip 1cm
+    (don't use gcc optimization!)
+  \end{center}
+
+  \note{Few thing about the bootloader}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -691,71 +678,97 @@
  \large
  \begin{center}
   \begin{tabular}{lcccc}
-           & FreeRTOS & uC/OS-III & RTX & TNKernel \\
-   \hline
-   License & Mod. GPL & restrictive & BSD & BSD \\
-   EFM32   & yes      & yes         & yes & no  \\
-   USB     & no       & yes         & no  & yes \\
+    & FreeRTOS & uC/OS-III & RTX & TNKernel \\[2.5mm]
+    \hline
+    \\[1mm]
+   License & Mod. GPL & restrictive & BSD & BSD \\[5mm]
+   EFM32   & yes      & yes         & yes & no  \\[5mm]
+   USB     & no       & yes         & no  & yes \\[5mm]
    FAT     & yes      & yes         & no  & yes \\
   \end{tabular}
  \end{center}
+
+ \note[item]{License main thing}
+ \note[item]{uC nice but closed}
+ \note[item]{FreeRTOS --- Keil RTX}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 
 \begin{frame}{Operating System}
+  \Large
   \begin{columns}[T] % align columns
     \begin{column}{.48\textwidth}
       FreeRTOS
+      \vskip 1cm
       \begin{itemize}
-        \item nice documentation
-        \item big community
-        \item a lot of examples
+      \item nice documentation
+        \vskip 1cm
+      \item big community
+        \vskip 1cm
+      \item a lot of examples
       \end{itemize}
     \end{column}
     \hfill%
     \begin{column}{.48\textwidth}
       Keil RTX
+      \vskip 1cm
       \begin{itemize}
-        \item nice documentation
-        \item community?
-        \item few examples
+      \item nice documentation
+        \vskip 1cm
+      \item community?
+        \vskip 1cm
+      \item few examples
       \end{itemize}
     \end{column}%
   \end{columns}
+
+  \note{The main criterium here was the level of knowledge sharing
+    around the projects}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 
 \begin{frame}{Applications}
-   \begin{center}
-    \includegraphics[height=7cm]{../pictures/sw-app.eps}
+  \begin{center}
+    \includegraphics[height=7cm]{sw-app.eps}
   \end{center}
+
+  \note{DO NOT SAY TOO MUCH, THERE WILL BE THE VIDEO LATER}
+  \note[item]{task: say basically what they do}
+  \note[item]{apps: say basically what they do}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 
 \begin{frame}
- \begin{center}
- \begin{figure}[h!]
-\centering    
-  \movie[height=5cm, width = 5cm, autostart, once, showcontrols=true,
-borderwidth=1pt, poster]{Applications Demonstration}{bird.avi}
-\end{figure}
- \end{center}
+  \begin{center}
+    \begin{figure}[h!]
+      \centering
+%  \movie[height=5cm, width = 5cm, autostart, once, showcontrols=true,
+%borderwidth=1pt, poster]{Applications Demonstration}{bird.avi}
+    \end{figure}
+  \end{center}
+  \note{just comment the video}
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 
 \begin{frame}{Documentation}
+  \Large
   \begin{center}
       www.ohwr.org/projects/f-watch/wiki
   \end{center}
+  \vskip 1cm
   \begin{itemize}
-    \item how to configure your machine
-    \item how to write applications
-    \item details about the project
+  \item how to configure your machine
+    \vskip 7mm
+  \item how to write applications
+    \vskip 7mm
+  \item details about the project
   \end{itemize}
+
+  \note{Few words about the project documentation}
 \end{frame}
 
 %#####################################################################
@@ -767,43 +780,111 @@ borderwidth=1pt, poster]{Applications Demonstration}{bird.avi}
   \begin{columns}[T] % align columns
     \begin{column}{.55\textwidth}
       \begin{itemize}
-       \item free PCB design
-       \item free mechanic design
-       \item free software
+      \item free PCB design
+        \vskip 8mm
+      \item free mechanic design
+        \vskip 8mm
+      \item free software
+        \vskip 8mm
        \item free tools
       \end{itemize}
+        \note[item]{just read list}
+        \note[item]{Free Tools --- This is madness! --- Madness? This
+          is Free Development!}
     \end{column}
     \hfill%
     \pause
     \begin{column}{.43\textwidth}
+      \vskip 18mm
       \begin{center}
         \textbf{free} development \\
         for\\
         \textbf{free} products
       \end{center}
+        \note[item]{A lot of good free tools for sw devel}
+        \note[item]{free tools often crappy}
+        \note[item]{fortunatelly today some of them are mature and
+          competitive}
     \end{column}%
   \end{columns}
 \end{frame}
+
 %------------ FRAME --------------------------------------------------
 
-\begin{frame}{easy to made}
- free tools
- 3d printing
- fast shipping
+\begin{frame}{Free Development Need Free Tools}
+  \begin{center}
+    \alt<2> {
+      \includegraphics[height=7.5cm]{fwatch-full-side-tool.eps}
+    }{
+      \includegraphics[height=7.5cm]{fwatch-full-side.eps}
+    }
+  \end{center}
+
+  \note[item]{Software is really easy to share}
+  \note[item]{Hardware sharing depends on tool and file format ---}
+
+  \note[item]{The first consideration. For a free development we
+    absolutely need free file format and tools to ease sharing}
+  \note[item]{.doc MS office example}
+  \note[item]{it was a pain}
+  \note[item]{today, comparable}
+  \note[item]{CERN experience}
 \end{frame}
 
-\begin{frame}{Free Products Need Free Tools}
- \begin{center}
-  \alt<2> {
-\includegraphics[height=7.5cm]{../pictures/fwatch-full-side-tool.eps}
-  }{
-\includegraphics[height=7.5cm]{../pictures/fwatch-full-side.eps}
-  }
+%------------ FRAME --------------------------------------------------
+
+\begin{frame}{Easy to Made}
+  \Large
+  \begin{center}
+    How difficult can be? \\
+    \vskip 1cm
+    Competitive free tools \\
+    \vskip 1cm
+    Specialized company in 3D printing \\
+    \vskip 1cm
+    Specialized company in PCB printing \\
+    \vskip 1cm
+    Easy to ship everywhere
  \end{center}
+
+  \note[item]{The second consideration is that today is so easy the
+    step from the idea to product}
 \end{frame}
 
-\begin{frame}{please join}
- 
+%------------ FRAME --------------------------------------------------
+
+\begin{frame}{Next Generation Free-Open Source}
+  \Large
+  \begin{center}
+    Free product are real \\
+    \vskip 1cm
+    cars, robots, watches, bikes, houses, phones, ... \\
+    \vskip 1cm
+    3D Metal printers \\
+  \end{center}
+
+  \note{Just talk a bit about it}
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+
+\begin{frame}{Please Join}
+  \Large
+  \begin{center}
+    \includegraphics[height=3.5cm]{fwatch-full-side.eps} \\
+    \vskip 5mm
+    Far away from a real product \\
+    \vskip 5mm
+    Make it a good example \\
+    \vskip 5mm
+    Join the project \\
+  \end{center}
+
+  \note[item]{not a real product}
+  \note[item]{it would be good to have a mechanical expert}
+  \note[item]{company can do it better}
+  \note[item]{in general join the project}
+  \note[item]{make it a good example}
 \end{frame}
 
 
