remove ambiguous word
Signed-off-by: Federico Vaga <federico.vaga@gmail.com>

--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -779,7 +779,7 @@
 \begin{frame}{MCU SDK}
   \Large
   \begin{center}
-    Mainly open source software \\
+    free and open source software \\
     \vskip 1cm
     A lot of integration examples \\
     \vskip 1cm
