Update CHF to EUR conversion rate.

--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -793,17 +793,17 @@
         \cline{2-4}
         & \multicolumn{3}{c|}{Number of watches}                                     &  \\ \cline{2-4}
         & \multicolumn{1}{c|}{1} & \multicolumn{1}{c|}{10} & \multicolumn{1}{c|}{50} &  \\ \cline{1-4}
-        \multicolumn{1}{|l|}{Pcb + components}         & 166 \texteuro                & 87 \texteuro                  & 73 \texteuro                  &  \\ \cline{1-4}
-        \multicolumn{1}{|l|}{Pcb assembly}             & -                      & 104 \texteuro                 & 59 \texteuro                  &  \\ \cline{1-4}
-        \multicolumn{1}{|l|}{Case + buttons + screws}  & 67 \texteuro                 & 65 \texteuro                  & 60 \texteuro                  &  \\ \cline{1-4}
-        \multicolumn{1}{|l|}{\textbf{TOTAL per watch}} & \textbf{233 \texteuro}       & \textbf{256 \texteuro}        & \textbf{193 \texteuro}        &  \\ \cline{1-4}
-        \multicolumn{1}{|l|}{\textbf{TOTAL}}           & \textbf{233 \texteuro}       & \textbf{2'558 \texteuro}      & \textbf{9'630 \texteuro}      &  \\ \cline{1-4}
+        \multicolumn{1}{|l|}{Pcb + components}         & 196 \texteuro               & 102 \texteuro                 & 87 \texteuro                  &  \\ \cline{1-4}
+        \multicolumn{1}{|l|}{Pcb assembly}             & -                           & 123 \texteuro                 & 70 \texteuro                  &  \\ \cline{1-4}
+        \multicolumn{1}{|l|}{Case + buttons + screws}  & 79 \texteuro                & 65 \texteuro                  & 71 \texteuro                  &  \\ \cline{1-4}
+        \multicolumn{1}{|l|}{\textbf{TOTAL per watch}} & \textbf{275 \texteuro}      & \textbf{302 \texteuro}        & \textbf{227 \texteuro}        &  \\ \cline{1-4}
+        \multicolumn{1}{|l|}{\textbf{TOTAL}}           & \textbf{275 \texteuro}      & \textbf{3'021 \texteuro}      & \textbf{11'370 \texteuro}      &  \\ \cline{1-4}
       \end{tabular}
       \caption{Estimated cost for small series (without shipping)}
     \end{table}
   \end{center}
 
-  \note[item]{}
+  \note[item]{Review table style to fit Federico's}
 
 \end{frame}
 
